--- a/index.html
+++ b/index.html
@@ -9,10 +9,33 @@
     body {
         margin: 0;
         font-family: Arial, sans-serif;
-        background: #0a0a0a; /* Sade qara fon */
+        background: #000;
         color: white;
         text-align: center;
         padding: 20px;
+        overflow-x: hidden;
+        position: relative;
+    }
+
+    /* ====== DUMAN ANİMASİYASI ====== */
+    .fog {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 200%;
+        height: 200%;
+        background: url('https://i.ibb.co/8z1bQ6K/fog-texture.png') repeat;
+        opacity: 0.23;
+        animation: fogmove 25s linear infinite;
+        pointer-events: none;
+        z-index: 0;
+        filter: blur(6px);
+    }
+
+    @keyframes fogmove {
+        0% {transform: translateX(0) translateY(0);}
+        50% {transform: translateX(-200px) translateY(50px);}
+        100% {transform: translateX(0) translateY(0);}
     }
 
     h1 {
@@ -22,6 +45,8 @@
         background: linear-gradient(45deg, #ff0000, #ffcc00, #00ffea);
         -webkit-background-clip: text;
         color: transparent;
+        position: relative;
+        z-index: 2;
     }
 
     .subtitle {
@@ -31,6 +56,8 @@
         background: linear-gradient(45deg, #00ff00, #ff0099, #00c3ff);
         -webkit-background-clip: text;
         color: transparent;
+        position: relative;
+        z-index: 2;
     }
 
     .btn {
@@ -45,6 +72,7 @@
         text-decoration: none;
         background: #111;
         position: relative;
+        z-index: 2;
         border: 2px solid #00eaff;
         box-shadow: 0 0 15px #00eaff, 0 0 25px #00eaff inset;
         transition: 0.2s;
@@ -60,6 +88,8 @@
         margin-top: -10px;
         color: #ffcc00;
         text-shadow: 0 0 5px #ffcc00;
+        z-index: 2;
+        position: relative;
     }
 
     @media (max-width: 600px) {
@@ -72,19 +102,17 @@
 </head>
 <body>
 
-<h1>Xan Casinoya Xoş Gəlmisiniz</h1>
+<div class="fog"></div>
 
+<h1>Xan Casinoya Xoş Gəlmisiniz</h1>
 <div class="subtitle">Ən etibarlı casino</div>
 
-<!-- BUTTON 1 -->
 <a class="btn" href="https://t.me/" target="_blank">Telegram</a>
 <div class="bonus">İlk depozitə 10% bonus</div>
 
-<!-- BUTTON 2 -->
 <a class="btn" href="https://wa.me/" target="_blank">Kod almaq üçün WhatsApp</a>
 <div class="bonus">İlk depozitə 10% bonus</div>
 
-<!-- BUTTON 3 -->
 <a class="btn" href="https://fastloto.com" target="_blank">FastLoto.com</a>
 <div class="bonus">İlk depozitə 10% bonus</div>
 
