--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     overflow: hidden;
 
     /* Arxa fon şəkli — sənin fayl adınla */
-    background-image: url("gsdVcyJEP7XsBthFLTNG5.jpeg");
+    background-image: url("futuristic-casino-architecture.jpg");
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
