--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@ h1 {
 }
 
 @keyframes neonFlicker {
-  0%   { opacity: 1; }
-  4%   { opacity: .4; }
-  6%   { opacity: 1; }
-  38%  { opacity: .3; }
-  40%  { opacity: 1; }
+  0% { opacity: 1; }
+  4% { opacity: .4; }
+  6% { opacity: 1; }
+  38% { opacity: .3; }
+  40% { opacity: 1; }
   100% { opacity: 1; }
 }
 
@@ -80,7 +80,10 @@ h1 {
 }
 
 .btn {
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
   padding: 16px;
   border-radius: 14px;
   font-size: 20px;
@@ -95,9 +98,9 @@ h1 {
   box-shadow: 0 0 18px #00ff9c;
 }
 
-.btn-telegram {
-  background: linear-gradient(90deg,#00bfff,#0066ff);
-  box-shadow: 0 0 18px #00bfff;
+.btn-instagram {
+  background: linear-gradient(90deg,#833ab4,#fd1d1d,#fcb045);
+  box-shadow: 0 0 18px rgba(253,29,29,0.6);
 }
 
 .btn-fastloto {
@@ -125,7 +128,6 @@ h1 {
   color: var(--gold);
 }
 
-/* DƏYİŞDİRİLMİŞ – DAHA OXUNAN BONUS */
 .special-bonus {
   margin-top: 14px;
   padding: 14px;
@@ -157,22 +159,20 @@ h1 {
 
 <div class="btn-box">
 
-  <!-- WHATSAPP – SMS DƏYİŞDİ -->
   <a class="btn btn-whatsapp" href="https://wa.me/998934559606?text=Salam%20depozit%20etmek%20isdiyirdim%20zehmet%20olmasa%20kart%20atardiz!" target="_blank">
-    Kod almaq üçün WhatsApp
+    🟢 WhatsApp
   </a>
 
-  <a class="btn btn-telegram" href="https://t.me/xancasino1" target="_blank">
-    Telegram
+  <a class="btn btn-instagram" href="https://www.instagram.com/xan.casino?igsh=MW8ydWh3MXVwc281ZA==" target="_blank">
+    📸 Instagram
   </a>
 
   <a class="btn btn-fastloto" href="https://fastloto.com" target="_blank">
-    Fastloto.com
+    🎰 Fastloto
   </a>
 
-  <!-- EN SON – KART SATIŞI -->
   <a class="btn btn-card" href="https://wa.me/998934559606?text=Salam%20men%20oz%20kartimi%20satmaq%20isdiyirdim!" target="_blank">
-    30 manata Leo Bank / Unibank kartları alınır
+    💳 30 manata Leo Bank / Unibank kartları alınır
   </a>
 
 </div>
