Update styles and add status features in index.html

--- a/index.html
+++ b/index.html
@@ -57,9 +57,26 @@ h1 {
 .desc {
   font-family: 'Poppins', sans-serif;
   font-size: 16px;
-  margin: 12px auto 22px;
+  margin: 12px auto 10px;
   max-width: 500px;
   color: var(--cyan);
+}
+
+/* YÜNGÜL STATUSLAR */
+.status-line {
+  font-size: 13px;
+  opacity: .85;
+  margin-top: 6px;
+}
+.status-live {
+  color: #00ff9c;
+}
+
+/* SAAT */
+.clock {
+  font-size: 13px;
+  color: #aaa;
+  margin-top: 4px;
 }
 
 .glow-line {
@@ -68,6 +85,23 @@ h1 {
   margin: 16px auto;
   background: linear-gradient(90deg,#00eaff,#ff00c8,#ffd700);
   box-shadow: 0 0 18px var(--cyan);
+}
+
+/* ÜSTÜNLÜKLƏR */
+.features {
+  font-size: 14px;
+  opacity: .85;
+  margin: 8px auto 6px;
+}
+.features span {
+  margin: 0 6px;
+}
+
+/* 18+ */
+.age {
+  font-size: 13px;
+  opacity: .6;
+  margin-top: 6px;
 }
 
 .btn-box {
@@ -123,11 +157,12 @@ h1 {
 }
 
 .info-box {
-  margin: 26px auto;
+  margin: 18px auto 8px;
   font-size: 16px;
   color: var(--gold);
 }
 
+/* BONUS */
 .special-bonus {
   margin-top: 14px;
   padding: 14px;
@@ -138,6 +173,13 @@ h1 {
   border-radius: 14px;
   color: #ffd700;
   box-shadow: 0 0 14px rgba(255,215,0,0.6);
+}
+
+/* STATISTIKA */
+.stats {
+  font-size: 12px;
+  opacity: .6;
+  margin-top: 8px;
 }
 
 @media (max-width:600px) {
@@ -155,23 +197,34 @@ h1 {
 
 <div class="desc">⭐ Tam güvənilir və tam etibarlı yeganə kazino</div>
 
+<div class="status-line status-live">● Canlı dəstək aktivdir</div>
+<div class="clock" id="clock">⏰ --:--:--</div>
+
+<div class="features">
+  <span>➤ Sürətli çıxarış</span>
+  <span>➤ Təhlükəsiz</span>
+  <span>➤ Orijinal oyunlar</span>
+</div>
+
+<div class="age">🔞 18+ Yalnız yetkinlər üçün</div>
+
 <div class="glow-line"></div>
 
 <div class="btn-box">
 
-  <a class="btn btn-whatsapp" href="https://wa.me/998934559606?text=Salam%20depozit%20etmek%20isdiyirdim%20zehmet%20olmasa%20kart%20atardiz!" target="_blank">
+  <a class="btn btn-whatsapp track" href="https://wa.me/998934559606?text=Salam%20depozit%20etmek%20isdiyirdim%20zehmet%20olmasa%20kart%20atardiz!" target="_blank">
     🟢 WhatsApp
   </a>
 
-  <a class="btn btn-instagram" href="https://www.instagram.com/xan.casino?igsh=MW8ydWh3MXVwc281ZA==" target="_blank">
+  <a class="btn btn-instagram track" href="https://www.instagram.com/xan.casino?igsh=MW8ydWh3MXVwc281ZA==" target="_blank">
     📸 Instagram
   </a>
 
-  <a class="btn btn-fastloto" href="https://fastloto.com" target="_blank">
+  <a class="btn btn-fastloto track" href="https://fastloto.com" target="_blank">
     🎰 Fastloto
   </a>
 
-  <a class="btn btn-card" href="https://wa.me/998934559606?text=Salam%20men%20oz%20kartimi%20satmaq%20isdiyirdim!" target="_blank">
+  <a class="btn btn-card track" href="https://wa.me/998934559606?text=Salam%20men%20oz%20kartimi%20satmaq%20isdiyirdim!" target="_blank">
     💳 30 manata Leo Bank / Unibank kartları alınır
   </a>
 
@@ -186,7 +239,30 @@ h1 {
     🎁 Daimi oyunçular üçün 5-ci depozitdə <br>
     <strong>100% BONUS</strong>
   </div>
+
+  <div class="stats" id="stats">🔥 Bugün 127 aktiv istifadəçi</div>
 </div>
+
+<script>
+/* SAAT */
+function updateClock() {
+  const d = new Date();
+  const t = d.toLocaleTimeString('az-AZ');
+  document.getElementById('clock').innerText = '⏰ ' + t;
+}
+setInterval(updateClock, 1000);
+updateClock();
+
+/* KLIK STATISTIKASI (yüngül, lokal) */
+let clicks = 127;
+document.querySelectorAll('.track').forEach(b=>{
+  b.addEventListener('click', ()=>{
+    clicks++;
+    document.getElementById('stats').innerText =
+      '🔥 Bugün ' + clicks + ' aktiv istifadəçi';
+  });
+});
+</script>
 
 </body>
 </html>
